--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -1,13 +1,9 @@
 #summary Getting started...
 
+<wiki:toc max_depth="1" />
+
 #sidebar TableOfContents
   * [Articles HOWTO articles]
-    * [ArticlesXSS Web security]
-    * [ArticlesDom DOM manipulation]
-    * [ArticlesStyle CSS and style]
-    * [ArticlesTips Tips and tricks]
-  * [DOMReference DOM reference]
-  * [HTMLElements HTML reference]
   * [CSSReference CSS reference]
 
 = Introduction =
